# banknifty-observatory

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
GOVERNANCE/: DATA_CONTRACT.md  DATA_INCIDENT_POLICY.md  DECISION_LOG_TEMPLATE.md  EVIDENCE_STANDARD.md  HYPOTHESIS_REGISTRY.md  METHODOLOGY_VERSIONING_POLICY.md  OPPORTUNITY_DEFINITION.md  PROJECT_CHARTER.md  README.md  REPOSITORY_RULES.md  STAGE_GATE_POLICY.md
acquisition/: README.md
config/: README.md  instrument_scope.yml.example
curation/: README.md
decisions/: decision_log.md
deployment/: README.md  env.example  production_checklist.md  server_setup.md
deployment/systemd/: banknifty-observatory.service  banknifty-observatory.timer
derivation/: README.md
docs/: ARCHITECTURE.md  PHASE1_FREEZE.md  glossary.md  project_charter.md  roadmap.md
future/: README.md
future/_DISABLED_execution_engine/: __init__.py
future/_DISABLED_live_trading/: __init__.py
future/_DISABLED_paper_trading/: __init__.py
future/_DISABLED_risk_manager/: __init__.py
future/_DISABLED_strategy_engine/: __init__.py
integrity/: README.md
lib/: README.md
lib/config/: __init__.py  _constants.py  _errors.py  _loader.py  _settings.py  _snapshot.py
lib/discovery/: __init__.py  _errors.py  _models.py  archiver.py  controller.py  instrument_registry.py  (+4 more)
migrations/: README.md
ops/: README.md
persistence/: README.md
research/: README.md  evidence_log.md  hypotheses.md  observations.md
scripts/: README.md  check_disk_space.sh  discovery_run.py  smoke_test.py  validate_expiries.sh
tests/: README.md
(+67 files in other folders)
